[package]
name = "rust_bitcoin_hardware_wallet_demos"
version = "0.1.0"
authors = ["Kevin Gislason <kevingislason@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.19.2"
serde = "1.0.99"
hex = "0.4.0"
