[package]
name = "rust_bitcoin_hardware_wallet_demos"
version = "0.1.0"
authors = ["Kevin Gislason <kevingislason@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.19.2"
serde = "1.0.99"
hex = "0.4.0"
num = "0.2.0"
num-traits = "0.2.8"
lazy_static = "1.4.0"
auto_ops = "0.1.0"
hmac = "0.7.1"
sha2 = "0.8.0"
ripemd160 = "0.8.0"
bigint = "4.4.1"
void = "1"
bit-vec = "0.6.1"
hashbrown = "0.7"
pbkdf2 = { version = "0.3", default-features = false }

[dependencies.genio]
version = "0.2.1"
default-features = false
